Migrate open-source Brooklin to JDK 17 (#1026)
Brooklin previously built and ran on Java 8 with Gradle 4.10.3. Gradle 4.x cannot run on JDK 17,
so the upgrade cascades through the entire build toolchain. This change moves the open-source
brooklin/ project to build and run on JDK 17 (source/target level 17).
Build toolchain:
- Gradle wrapper 4.10.3 -> 7.6.4 (first Gradle line that runs on JDK 17)
- Rest.li/Pegasus gradle plugin 29.2.3 -> 29.51.0 and pegasus libs 29.14.0 -> 29.51.0
(29.51.0 certifies Gradle 6.9.4-8.5)
- license-gradle-plugin -> 0.16.1 (Gradle 7 compatible)
- FindBugs -> SpotBugs (com.github.spotbugs 5.2.5 plugin, spotbugs 4.8.3); the FindBugs Gradle
plugin was removed in Gradle 6 and FindBugs does not support JDK 17
- Checkstyle 6.11.2 -> 10.12.7 (6.x does not run on JDK 17)
- Removed Gradle 7 configurations compile/testCompile -> api/testImplementation (java-library),
configurations.runtime -> runtimeClasspath, JavaExec main -> mainClass, Tar baseName ->
archiveBaseName, testReportDirName -> reports.html.outputLocation
Dependency-resolution fixes required by variant-aware resolution (Gradle 7+):
- Re-export datastream-common's generated data-template jar via the pegasus 'dataTemplate'
configuration so downstream modules can still see Datastream and friends
- Add spotbugs-annotations (compileOnly) so -Werror does not fail on third-party classes
(e.g. ZooKeeper) annotated with edu.umd.cs.findbugs.annotations.SuppressFBWarnings
- Resolve the checkstyle 10 guava / google-collections capability conflict
JDK 17 / test-tooling source changes:
- Mockito 1.10.19 -> 5.2.0:
- org.mockito.Matchers -> ArgumentMatchers
- removed anyObject()/anyXOf() -> any()/anyX(); ArgumentMatcher abstract class -> functional
interface
- type-strict matchers: anyInt() -> anyLong() for Producer.flush(long, TimeUnit)
- checked-exception validation: doThrow(InterruptedException) on void no-throws methods ->
doAnswer (an Answer may throw any Throwable)
- Replace new Long(...) (deprec